--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>Exercícios</h1>
+    <h3>Amizades</h3>
+    <ul>
+        <li>Fulano</li>
+        <li>Sicrano</li>
+        <li>Beltrano</li>
+    </ul>
   </body>
 </html>
