add img externa

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
@@ -12,5 +12,6 @@
         <li>Sicrano</li>
         <li>Beltrano</li>
     </ul>
+    <img src="https://media.glassdoor.com/sqls/3790463/trybe-brazil-squareLogo-1620041924237.png"><br>
   </body>
 </html>
