--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
@@ -13,5 +13,6 @@
         <li>Beltrano</li>
     </ul>
     <img src="https://media.glassdoor.com/sqls/3790463/trybe-brazil-squareLogo-1620041924237.png"><br>
+    <img src="download.png">
   </body>
 </html>
