add paragrafo p cada pessoa

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
@@ -13,5 +13,10 @@
         <li>Wilson</li>
         <li>Juliana</li>
       </ul>
+      <p>Adilson é um cara top</p>
+      <p>Vinicius é mano-show</p>
+      <p>Erickson é o melhor celular</p>
+      <p>Vai Wilson vai</p>
+      <p>Juliana é uma pessoa maneira demais</p>
   </body>
 </html>
