--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
@@ -6,17 +6,17 @@
   </head>
   <body>
     <h1>Exercícios</h1>
-      <ul>
-        <li>Adilson</li>
-        <li>Vinicius</li>
-        <li>Erickson</li>
-        <li>Wilson</li>
-        <li>Juliana</li>
-      </ul>
-      <p>Adilson é um cara top</p>
-      <p>Vinicius é mano-show</p>
-      <p>Erickson é o melhor celular</p>
-      <p>Vai Wilson vai</p>
-      <p>Juliana é uma pessoa maneira demais</p>
+    <ul>
+      <li><a href="#adilson">Adilson</a></li>
+      <li><a href="#vinicius">Vinicius</a></li>
+      <li><a href="#erickson">Erickson</a></li>
+      <li><a href="#wilson">Wilson</a></li>
+      <li><a href="#juliana">Juliana</a></li>
+    </ul>
+    <p id="adilson">Adilson é um cara top</p>
+    <p id="vinicius">Vinicius é mano-show</p>
+    <p id="erickson">Erickson é o melhor celular</p>
+    <p id="wilson">Vai Wilson vai</p>
+    <p id="juliana">Juliana é uma pessoa maneira demais</p>
   </body>
 </html>
