add link externo p google

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index1.html
@@ -13,6 +13,7 @@
       <li><a href="#wilson">Wilson</a></li>
       <li><a href="#juliana">Juliana</a></li>
     </ul>
+    <p>Dê uma olhada no <a href="https://www.google.com/" target="_blank">Google</a></p>
     <p id="adilson">Adilson é um cara top</p>
     <p id="vinicius">Vinicius é mano-show</p>
     <p id="erickson">Erickson é o melhor celular</p>
