--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/03-agrupamento-de-seletores-e-pseudo-classes/index.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/03-agrupamento-de-seletores-e-pseudo-classes/index.html
@@ -8,6 +8,16 @@
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <l>Google</l>
+        <l>Youtube</l>
+        <l>Wikipedia</l>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <l>São práticos</l>
+        <l>Facilitam minha vida</l>
+        <l>Me fazem aprender</l>
+    </ul>
   </body>
 </html>
