cor de fundo muda com cursor nas listas

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/03-agrupamento-de-seletores-e-pseudo-classes/index.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/03-agrupamento-de-seletores-e-pseudo-classes/index.html
@@ -9,15 +9,15 @@
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
     <ol>
-        <li>Google</li>
-        <li>Youtube</li>
-        <li>Wikipedia</li>
+        <li class="listas">Google</li>
+        <li class="listas">Youtube</li>
+        <li class="listas">Wikipedia</li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
     <ul>
-        <li>São práticos</li>
-        <li>Facilitam minha vida</li>
-        <li>Me fazem aprender</li>
+        <li class="listas">São práticos</li>
+        <li class="listas">Facilitam minha vida</li>
+        <li class="listas">Me fazem aprender</li>
     </ul>
   </body>
 </html>
