mudando second e third para inline-block

--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
@@ -24,6 +24,7 @@
         height: 50px;
         text-align: center;
         width: 300px;
+        display: inline-block;
       }
 
       .third {
@@ -32,6 +33,7 @@
         height: 50px;
         text-align: center;
         width: 300px;
+        display: inline-block;
       }
 
     </style>
