--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
@@ -35,6 +35,9 @@
         width: 300px;
         display: inline-block;
       }
+      h3, ul {
+        text-align: center;
+      }
 
     </style>
   </head>
