--- a/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
+++ b/01-fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/hackathon.html
@@ -41,6 +41,9 @@
       li {
         list-style: none;
       }
+      .premiacao ul li {
+        display: inline-block;
+      }
 
     </style>
   </head>
@@ -55,7 +58,7 @@
         <li class="third">3º - Equipe 3</li>
       </ul>
     </section>
-    <section>
+    <section class="premiacao">
       <h3>Premiação Primeiro Lugar:</h3>
       <ul>
         <li>| R$ 1000,00 por integrante da equipe |</li>
