--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-<!-- Pág Seletores de elementos
-
+<!-- Pág. Seletores de elementos
+  
 Recupere o elemento que contém o título da página e faça algo com ele, por exemplo alterá-lo para o nome do seu filme favorito.
 Agora recupere o segundo parágrafo e use sua criatividade para alterá-lo.
 Por fim, recupere o subtítulo e altere-o também. -->
@@ -17,6 +17,37 @@ Por fim, recupere o subtítulo e altere-o também. -->
     <script>
       const paragraph = document.getElementById("paragraph");
       paragraph.style.color = "red";
+
+      document.getElementById("page-title").innerText = "Teste";
+      document.getElementById('second-paragraph').innerText = 'Mais um teste';
+      document.getElementById('subtitle').innerText = "sou muito criativo";
+    </script>
+  </body>
+</html>
+
+
+<!-- Adicione uma classe igual para os dois parágrafos;
+Recupere os seus parágrafos via código JavaScript, usando a função getElementsByClassName;
+Altere algum estilo do primeiro deles;
+Recupere o subtítulo e altere a cor dele usando a função getElementsByTagName.-->
+
+<!DOCTYPE html>
+<html>
+  <body>
+    <header>
+      <h2 id="page-title">Título</h2>
+      <p id="paragraph" class="paragrafos">Dê uma cor para este parágrafo!</p>
+      <h4 id="subtitle">Subtítulo</h4>
+      <p id="second-paragraph" class="paragrafos">Segundo parágrafo!</p>
+    </header>
+    <script>
+      const paragraph = document.getElementById("paragraph");
+      paragraph.style.color = "red";
+
+      const paragrafos = document.getElementsByClassName('paragrafos');
+      paragrafos[0].style.backgroundColor = 'green';
+      const subtitulo = document.getElementsByTagName('h4')[0];
+      subtitulo.style.color = 'yellow';
     </script>
   </body>
 </html>
