--- a/01-fundamentos/secao-04-dom-eventos-e-web-storage/dia-02-trabalhando-com-elementos/index.html
+++ b/01-fundamentos/secao-04-dom-eventos-e-web-storage/dia-02-trabalhando-com-elementos/index.html
@@ -27,16 +27,17 @@
   const pai = elementoOndeVoceEsta.parentElement;
   pai.style.color = 'red';
   //Acesse o primeiroFilhoDoFilho e adicione um texto a ele. Você se lembra dos vídeos da aula anterior, como fazer isso?
-
+  const primeiroFilhoDoFilho = elementoOndeVoceEsta.firstElementChild;
+  primeiroFilhoDoFilho.innerHTML = 'Inserindo texto aqui.';
   //Acesse o primeiroFilho a partir de pai.
-
+  let primeiroFilho = pai.firstElementChild;
   //Agora acesse o primeiroFilho a partir de elementoOndeVoceEsta.
-
+  primeiroFilho = elementoOndeVoceEsta.previousElementSibling;
   //Agora acesse o texto Atenção! a partir de elementoOndeVoceEsta.
-
+  const atencao = elementoOndeVoceEsta.nextSibling;
   //Agora acesse o terceiroFilho a partir de elementoOndeVoceEsta.
-  
+  let terceiroFilho = elementoOndeVoceEsta.nextElementSibling;
   //Agora acesse o terceiroFilho a partir de pai.
-
+  terceiroFilho = pai.lastElementChild.previousElementSibling;
 </script>
 </body>
