--- a/02-fe/01-intro-e-js-assincrono/dia-01/index.html
+++ b/02-fe/01-intro-e-js-assincrono/dia-01/index.html
@@ -7,6 +7,28 @@
   <title>Document</title>
 </head>
 <body>
+  <main>
+    <h2>Validador de campos</h2>
+    <section>
+      <form action="">
+        <div class="form-div">
+          <input type="text" name="userInput" id="userInput">
+          <div class="select-btn">
+            <select name="validatorType" id="validatorType">
+              <option value="email">Email</option>
+              <option value="url">URL</option>
+              <option value="ola">Texto igual a "Olá, mundo!"</option>
+              <option value="letras">Somente letras</option>
+              <option value="par">Número par</option>
+            </select>
+            <button type="submit" id="submitBtn">Validar</button>
+          </div>
+        </div>
+        </form>
+    </section>
+    <p id="result">Digite o valor, escolha a opção e clique em validar</p>
+  </main>
+
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
