--- a/02-fe/01-intro-e-js-assincrono/dia-02/index.html
+++ b/02-fe/01-intro-e-js-assincrono/dia-02/index.html
@@ -7,7 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <button>click</button>
+  <h1>SuperHeroes</h1>
+  <div id="super-hero-card">
+    <img src="" alt="" id="super-hero-img">
+    <h2 id="super-hero-name"></h2>
+  </div>
+  <button id="draft-btn">Sortear</button>
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
