adicionando css e melhorando mensagem de erro

--- a/02-fe/01-intro-e-js-assincrono/dia-02/index.html
+++ b/02-fe/01-intro-e-js-assincrono/dia-02/index.html
@@ -9,8 +9,10 @@
 <body>
   <h1>SuperHeroes</h1>
   <div id="super-hero-card">
-    <img src="" alt="" id="super-hero-img">
-    <h2 id="super-hero-name"></h2>
+    <div id="img-div">
+      <img src="" alt="" id="super-hero-img">
+    </div>
+    <h2 id="super-hero-name">-- Hero name --</h2>
   </div>
   <button id="draft-btn">Sortear</button>
   <script type="module" src="./src/main.js"></script>
