--- a/02-fe/01-intro-e-js-assincrono/dia-02/selectpet/index.html
+++ b/02-fe/01-intro-e-js-assincrono/dia-02/selectpet/index.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <div id="img-div">
-      <img src="" alt="Random pet">
+      <img src="" alt="Random pet" id="pet-img">
     </div>
   </main>
   <script type="module" src="./src/main.js"></script>
