exercicio casadecambio com estilizacao css basica

--- a/02-fe/01-intro-e-js-assincrono/dia-03-casadecambio/index.html
+++ b/02-fe/01-intro-e-js-assincrono/dia-03-casadecambio/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
   <header>
-    <h1>Select pet</h1>
-    <div id="btn-div">
-      <button id="dog-btn">Get random dog</button>
-      <button id="cat-btn">Get random cat</button>
-      <button id="surprise-btn">Surprise me</button>
+    <h1>Casa de <span class="cambio">Câmbio</span></h1>
+    <div id="input-div">
+      <p>Digite a moeda:</p>
+      <form action="">
+        <input id="input" type="text">
+        <button type="submit" id="search-btn">Pesquisar</button>
+      </form>
     </div>
   </header>
   <main>
-    <div id="img-div">
-      <img src="" alt="Random pet" id="pet-img">
-    </div>
+    <h2 id="value-text"></h2>
+    <ul id="coin-list"></ul>
   </main>
   <script type="module" src="./src/main.js"></script>
 </body>
